--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "imagekit": "^6.0.0",
     "inngest": "^3.40.2",
     "mongoose": "^8.18.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
