--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,15 @@
     "@clerk/clerk-react": "^5.39.0",
     "@react-three/drei": "^10.7.4",
     "@react-three/fiber": "^9.3.0",
+    "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.12.2",
     "lucide-react": "^0.537.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.23.1",
     "tailwindcss": "^4.1.11",
     "three": "^0.179.1"
